<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".answer"
    android:gravity="center">
    <GridLayout
        android:layout_width="match_parent"
        android:columnCount="1"
        android:layout_margin="15sp"
        android:padding="10sp"
        android:background="@drawable/congratspage"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/trophy"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/congrats"
            android:textSize="35sp"
            android:layout_gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/_90_score"
            android:textColor="#49be25"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/quiz_completed_successfully"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_attempt"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_60_question"
                android:textSize="25sp"
                android:textColor="#2596be"
                android:layout_gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_that"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_55_answer"
            android:textColor="#49be25"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_correct"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="25sp"
            android:layout_marginBottom="25sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_with_us"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginLeft="3sp"
                android:src="@drawable/instagram"/>
            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginLeft="3sp"
                android:src="@drawable/whatsapp"/>
            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginLeft="3sp"
                android:src="@drawable/facebook"/>
        </LinearLayout>
    </GridLayout>
</LinearLayout>