<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#191970"
    tools:context=".mcq">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:orientation="horizontal"
        android:gravity="center"
        android:minHeight="10sp" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30sp">
            <ImageView
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:src="@drawable/science"
                android:backgroundTint="@color/maincolor"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:padding="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/science_nature"
                android:gravity="center"
                android:textSize="35sp"
                android:paddingStart="15sp" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:padding="15sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_60"
            android:textSize="25sp"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_03_00_min"
            android:textSize="25sp"
            android:layout_alignParentRight="true"
            android:textColor="@color/white" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="15sp"
        android:layout_height="1sp"
        android:background="@color/white"/>
    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="25sp"
        android:textSize="17sp"
         android:textColor="@color/white"
         android:text="@string/question"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20sp"
        android:layout_height="wrap_content"
        android:background="@drawable/mcq1"
        android:padding="10sp"
        android:layout_marginHorizontal="25sp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@drawable/mcq_a" />
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:paddingLeft="25sp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/roscosmos"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25sp"
        android:layout_marginTop="20sp"
        android:background="@drawable/mcq2"
        android:orientation="horizontal"
        android:padding="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_gravity="center"
            android:text="@string/nasa"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="1dp"
                android:src="@drawable/mcq_b" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mcq1"
        android:padding="10sp"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="25sp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@drawable/mcq_c" />
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="25sp"
            android:textColor="@color/black"
            android:text="@string/isro"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mcq1"
        android:padding="10sp"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="25sp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:src="@drawable/mcq_d" />
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:paddingLeft="25sp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/jaxa"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="50sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100sp"
            android:text="Submit"
            android:background="@drawable/button_2"
            android:backgroundTint="#fca510"
            android:layout_marginHorizontal="90sp"/>
    </RelativeLayout>
</LinearLayout>