<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191970"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:minHeight="10sp" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_menu_24"
                android:backgroundTint="@color/maincolor"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            >
            <TextView
                android:padding="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz_app"
                android:gravity="center"
                android:textSize="50sp"
                android:paddingLeft="15sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="100sp"
                android:layout_height="70sp"
                android:src="@drawable/userphoto"
                />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="25sp"
            android:background="@drawable/head2"
            android:minHeight="80sp"
            android:columnCount="2"
            android:padding="15sp">
            <TextView
                android:id="@+id/lbl1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30sp"
                android:text="question_count" />
            <TextView
                android:id="@+id/lbl3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/erned_point"
                android:layout_marginStart="30sp" />
            <TextView
                android:id="@+id/lbl2"
                android:layout_marginStart="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_200"
                android:layout_gravity="center"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/lbl4"
                android:layout_width="wrap_content"
                android:layout_marginStart="30sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_5000"
                android:textSize="25sp"/>
        </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="30sp"
        android:layout_marginRight="25sp"
        android:background="@drawable/head3"
        android:minHeight="80sp"
        android:gravity="center"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:src="@drawable/pen"
                android:layout_marginStart="25sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/art_and_literature"
                android:textSize="25sp"
                android:gravity="center"
                android:textAlignment="center"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="30sp"
        android:layout_marginRight="25sp"
        android:background="@drawable/head3"
        android:minHeight="80sp"
        android:layout_gravity="center"
        android:gravity="center"
        >
            <ImageView
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:src="@drawable/dice"
                android:layout_marginStart="25sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/general_knowledge"
                android:textSize="25sp"
                android:gravity="center"
                android:textAlignment="center"
                />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="30sp"
        android:layout_marginRight="25sp"
        android:background="@drawable/head3"
        android:minHeight="80sp"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:src="@drawable/science"
            android:layout_marginStart="25sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/science_and_nature"
            android:textSize="25sp"
            android:gravity="center"
            android:textAlignment="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="30sp"
        android:layout_marginRight="25sp"
        android:background="@drawable/head3"
        android:minHeight="80sp"
        android:layout_gravity="center"
        android:gravity="center">
        <ImageView
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:src="@drawable/technology"
            android:layout_marginStart="25sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/technology"
            android:textSize="25sp"
            android:gravity="center"
            android:textAlignment="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25sp"
        android:layout_marginTop="30sp"
        android:layout_marginRight="25sp"
        android:layout_marginBottom="25sp"
        android:gravity="center"
        android:minHeight="80sp">
        <Button
            android:id="@+id/upgrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="src_atop"
            android:text="@string/upgrade"
            android:textColor="@color/white"
            android:minWidth="300sp"
            />
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>